Fix wrong colour on dark mode prferences

--- a/content/styles/shared_override.scss
+++ b/content/styles/shared_override.scss
@@ -43,3 +43,7 @@ code {
   padding: 0 !important;
   overflow-y: clip;
 }
+
+img {
+  color-scheme: light;
+}
